--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,11 @@ body {
 
 .bookList {
     margin: 16px;
+    display: grid;
+    column-gap: 16px;
+    row-gap: 16px;
+    grid-template-columns: repeat(auto-fill, 250px);
+
 }
 
 .book {
