--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,8 @@ body {
 }
 
 .wrapper {
-    width: 334px;
     margin: 8px 0px 8px 0px;
+    width: 2fr;
 }
 
 .topbar {
@@ -31,15 +31,16 @@ body {
 .topbar h1 {
     margin: 0px 10px;
     color: var(--complementary);
+    width: 1fr;
 }
 
 .topbar button {
     margin: auto 5px;
     height: 100%;
-    font-size: 20px;
     background-color: var(--complementary);
     border: 2px solid var(--foreground);
 }
+
 /* Styling all books */
 
 .booksList {
@@ -48,7 +49,7 @@ body {
     column-gap: 16px;
     row-gap: 16px;
     grid-template-columns: repeat(auto-fill, 250px);
-
+    justify-content: center;
 }
 
 .book {
@@ -124,7 +125,8 @@ body {
     background-color: var(--complementary);
 }
 
-#signOutBtn {
-    padding-left: 17%;
-    padding-right: 16%;
+@media screen and (min-width: 500px) {
+    .topbar button {
+        font-size: 20px;
+    }
 }
