--- a/styles.css
+++ b/styles.css
@@ -130,3 +130,9 @@ body {
         font-size: 20px;
     }
 }
+
+@media screen and (max-width: 365px) {
+    .topbar button {
+        font-size: 10px;
+    }
+}
