--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ body {
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	width: 30vw;
+	width: max(30vw, 350px);
 
 	background-color: var(--complementary);
 	border: 6px solid var(--accent);
@@ -99,7 +99,7 @@ body {
 	column-gap: 16px;
 	row-gap: 16px;
 	grid-template-columns: repeat(auto-fill, 250px);
-	justify-content: center;
+	justify-content: space-around;
 }
 
 .book {
@@ -108,6 +108,7 @@ body {
 	padding-top: 10px;
 	background-color: var(--foreground);
 	border: 2px solid var(--accent);
+	/* border-radius: 6px; */
 }
 
 .book * {
@@ -117,6 +118,7 @@ body {
 .inline {
 	display: flex;
 	justify-content: space-evenly;
+	align-items: center;
 	margin-bottom: 15px;
 }
 
@@ -126,10 +128,11 @@ body {
 
 .book button {
 	width: 100px;
-	height: 25px;
+	height: 48px;
 	background-color: var(--accent);
 	color: var(--complementary);
 	border: 2px solid var(--complementary);
+	/* border-radius: 4px; */
 }
 
 /* Form styling */
